# diode

./: .coveragerc  .mypy.ini  CLAUDE.md  DESIGN.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.github/workflows/: ci.yml
cmake/modules/: DiodeConfig.cmake  FindCMock.cmake
diode/src/diode/: __init__.py  cli.py
include/diode/common/: list.h  listify.h  util.h
tests/e2e/simple/: CMakeLists.txt  simple_dep.h  test_simple.c
